# code-browser

./: README.md  pyproject.toml  setup.py
src/codebrowser/: __init__.py  __main__.py  server.py  static.html
