[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebrowser"
version = "1.0.0"
description = "Browse source code locally with a GitHub-style UI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ecascardo"},
]
keywords = ["code", "browser", "viewer", "syntax-highlighting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]

[project.scripts]
codebrowser = "codebrowser.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codebrowser = ["static.html"]
